# timecalc

./: .gitignore  README.md  pyproject.toml  timecalc.py
