[tool.poetry]
name = "timecalc"
version = "0.1.0"
description = "Simple time calculator"
authors = ["Mark Meliksetyan <markmelix@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyparsing = "^3.1.1"
pytimeparse = "^1.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
